force-app/main/default/objects/Zuora_Update__e/Zuora_Update__e.object-meta.xml
<CustomObject>
    <label>Zuora Update</label>
    <pluralLabel>Zuora Updates</pluralLabel>
</CustomObject>