force-app/main/default/objects/Zuora_Update__e/fields/Auto_pay__c.field-meta.xml
<CustomField>
    <fullName>Auto_pay__c</fullName>
    <label>Auto pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>