force-app/main/default/objects/Zuora_Update__e/fields/Business_Line_Giro__c.field-meta.xml
<CustomField>
    <fullName>Business_Line_Giro__c</fullName>
    <label>Business Line (Giro)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>