force-app/main/default/objects/Zuora_Update__e/fields/Communication_profile__c.field-meta.xml
<CustomField>
    <fullName>Communication_profile__c</fullName>
    <label>Communication profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>