force-app/main/default/objects/Zuora_Update__e/fields/Comunas__c.field-meta.xml
<CustomField>
    <fullName>Comunas__c</fullName>
    <label>Comunas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>