force-app/main/default/objects/Zuora_Update__e/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>Contact City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>