force-app/main/default/objects/Zuora_Update__e/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <label>Contact State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>