force-app/main/default/objects/Zuora_Update__e/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <label>Contact Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>