force-app/main/default/objects/Zuora_Update__e/fields/Contact_Zuora_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zuora_ID__c</fullName>
    <label>Contact Zuora ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>