force-app/main/default/objects/Zuora_Update__e/fields/First_Document__c.field-meta.xml
<CustomField>
    <fullName>First_Document__c</fullName>
    <label>First Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>