force-app/main/default/objects/Zuora_Update__e/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <label>Invoice Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>