force-app/main/default/objects/Zuora_Update__e/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>