force-app/main/default/objects/Zuora_Update__e/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>