force-app/main/default/objects/Zuora_Update__e/fields/Provincias__c.field-meta.xml
<CustomField>
    <fullName>Provincias__c</fullName>
    <label>Provincias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>