force-app/main/default/objects/Zuora_Update__e/fields/Regiones__c.field-meta.xml
<CustomField>
    <fullName>Regiones__c</fullName>
    <label>Regiones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>