force-app/main/default/objects/Zuora_Update__e/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>