force-app/main/default/objects/Zuora_Update__e/fields/Zuora_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Account_ID__c</fullName>
    <label>Zuora Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>